fix map position on small screen, fix dots position on slider, fix Thank-You message font-size and position

--- a/control/Project_on_TS/src/css/adaptive.less
+++ b/control/Project_on_TS/src/css/adaptive.less
@@ -338,7 +338,7 @@
     top: -23px;
   }
   .slick-dots {
-    margin-top: -10px;
+    margin-top: -60px;
   }
 
   .consult {
@@ -821,7 +821,7 @@
   .excursion {
     padding-top: 90px;
     background-image: url("../src/images/map-gray.png");
-    background-position: top;
+    background-position: center -60px;
     background-size: cover;
 
   }
