--- a/control/Project_on_TS/src/css/styles.less
+++ b/control/Project_on_TS/src/css/styles.less
@@ -903,6 +903,8 @@ form {
   justify-content: center;
   align-items: center;
   color: rgb(255, 255, 255);
+  font-size: 18px;
+  margin: 0 auto;
 
   .order-done-h {
     font-weight: normal;
@@ -1051,6 +1053,7 @@ footer {
     background-color: black;
     color: white;
     z-index: 99;
+    cursor: pointer;
   }
   .slider-text {
     display: grid;
@@ -1136,6 +1139,9 @@ footer {
 }
 .slick-dots {
   text-align: center;
+  position: relative;
+  z-index: 100;
+  margin-top: -90px;
 
   li {
     display: inline-block;
